--- a/SaleSystem/SaleSystem.vcxproj
+++ b/SaleSystem/SaleSystem.vcxproj
@@ -186,6 +186,7 @@
     <ClInclude Include="CDispalyView.h" />
     <ClInclude Include="CLoginDlg.h" />
     <ClInclude Include="CSelectView1.h" />
+    <ClInclude Include="CUserDlg.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="InfoFile.h" />
     <ClInclude Include="MainFrm.h" />
@@ -200,6 +201,7 @@
     <ClCompile Include="CDispalyView.cpp" />
     <ClCompile Include="CLoginDlg.cpp" />
     <ClCompile Include="CSelectView1.cpp" />
+    <ClCompile Include="CUserDlg.cpp" />
     <ClCompile Include="InfoFile.cpp" />
     <ClCompile Include="MainFrm.cpp" />
     <ClCompile Include="pch.cpp">
