--- a/SaleSystem/SaleSystem.vcxproj
+++ b/SaleSystem/SaleSystem.vcxproj
@@ -183,7 +183,10 @@
     </ResourceCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="CAddDlg.h" />
+    <ClInclude Include="CDelDlg.h" />
     <ClInclude Include="CDispalyView.h" />
+    <ClInclude Include="CInfoDlg.h" />
     <ClInclude Include="CLoginDlg.h" />
     <ClInclude Include="CSelectView1.h" />
     <ClInclude Include="CSellDlg.h" />
@@ -199,7 +202,10 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="CAddDlg.cpp" />
+    <ClCompile Include="CDelDlg.cpp" />
     <ClCompile Include="CDispalyView.cpp" />
+    <ClCompile Include="CInfoDlg.cpp" />
     <ClCompile Include="CLoginDlg.cpp" />
     <ClCompile Include="CSelectView1.cpp" />
     <ClCompile Include="CSellDlg.cpp" />
