--- a/SaleSystem/SaleSystem.vcxproj.filters
+++ b/SaleSystem/SaleSystem.vcxproj.filters
@@ -57,6 +57,15 @@
     <ClInclude Include="CSellDlg.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="CInfoDlg.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="CAddDlg.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="CDelDlg.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="SaleSystem.cpp">
@@ -90,6 +99,15 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="CSellDlg.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="CInfoDlg.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="CAddDlg.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="CDelDlg.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
